# persistence-learning

./: .gitignore  .gitmodules  README.md  git-submodule-sync.rb
code/dipha-pss/: CMakeLists.txt
code/dipha-pss/src/: diagram_distance.cpp
code/matlab/: pl_setup.m
code/matlab/experiments/: pl_experiment_OASIS_run_dipha.m  pl_experiment_OASIS_run_mmd.m  pl_experiment_OASIS_subjects.m  pl_experiment_pss_average.m
code/matlab/testing/: pl_test_timing.m
code/matlab/utilities/: pl_mesh2dipha.m  pl_mesh2hks.m  pl_mmd.m  pl_normalize_kernel.m  pl_plot_pss.m  pl_sample_annulus.m  pl_sample_linked_annuli.m  pl_sample_torus.m  pl_write_persistence_diagram.m
data/: options_pl_experiment_OASIS_run_mmd.mat  options_pl_experiment_pss_average.mat
